refactor: remove Chromatic and update configuration
### Removed ❌
- Excluído Chromatic de configurações e documentação
- Removido suporte a Chromatic em arquivos de configuração e documentação

### Changed 🔄
- Atualizadas configurações do pnpm para desabilitar warnings e melhorar compatibilidade
- Alterações na documentação para refletir uso do Storybook em vez de Chromatic

### Fixed 🐛
- Corrigidos links e referências a Chromatic em diversos arquivos
- Ajustes na configuração do ambiente para melhor integração com Storybook

--- a/stories/Configure.mdx
+++ b/stories/Configure.mdx
@@ -103,11 +103,11 @@ export const RightArrow = () => (
         >Learn more<RightArrow /></a>
       </div>
       <div className="sb-grid-item">
-        <img src={Share} alt="A browser window showing a Storybook being published to a chromatic.com URL" />
-        <h4 className="sb-section-item-heading">Publish to Chromatic</h4>
-        <p className="sb-section-item-paragraph">Publish your Storybook to review and collaborate with your entire team.</p>
+        <img src={Share} alt="A browser window showing a Storybook being built for static deployment" />
+        <h4 className="sb-section-item-heading">Build Storybook</h4>
+        <p className="sb-section-item-paragraph">Build your Storybook for static deployment to share with your team.</p>
         <a
-          href="https://storybook.js.org/docs/sharing/publish-storybook/?renderer=react#publish-storybook-with-chromatic"
+          href="https://storybook.js.org/docs/sharing/publish-storybook/?renderer=react#build-storybook-for-static-hosting"
           target="_blank"
         >Learn more<RightArrow /></a>
       </div>
@@ -193,7 +193,7 @@ export const RightArrow = () => (
         Watch tutorials, feature previews and interviews.
 
         <a
-          href="https://www.youtube.com/@chromaticui"
+          href="https://www.youtube.com/@storybookjs"
           target="_blank"
         >Watch on YouTube<RightArrow /></a>
       </div>
