--- a/stories/docs/DesignSystem.mdx
+++ b/stories/docs/DesignSystem.mdx
@@ -225,7 +225,7 @@ Baseado em múltiplos de 4px:
 
 ### Visual Regression
 
-- Todas as seções têm snapshots no Chromatic
+- Todas as seções têm documentação no Storybook
 - Breakpoints testados: 375px, 768px, 1024px, 1440px
 
 ### Acessibilidade
